name:                       gtk3-test
version:                    0.1.0.0
synopsis:                   Minimal GTK3 test app in Haskell
homepage:                   https://github.com/rcook/gtk3-test#readme
license:                    MIT
license-file:               LICENSE
author:                     Richard Cook
maintainer:                 rcook@rcook.org
copyright:                  2018 Richard Cook
category:                   Command Line
build-type:                 Simple
cabal-version:              >= 1.10
extra-source-files:         README.md

executable gtk3-test
  hs-source-dirs:           src
  main-is:                  Main.hs
  other-modules:            App
                          , Files
  default-language:         Haskell2010
  ghc-options:              -fwarn-unused-imports
  build-depends:            base >= 4.7 && < 5
                          , bytestring
                          , file-embed
                          , gtk3
                          , template-haskell
                          , temporary
  if os(osx)
    build-depends:          gtk3-mac-integration
